--- a/wooho.css
+++ b/wooho.css
@@ -31,11 +31,10 @@ a {
     font-size: 24px; 
     padding: 10px 20px; 
     border: 4px solid transparent; 
-    border-radius: 10px;
     transition: background-color 0.3s, color 0.3s, border 0.3s;
 }
 
-a:hover {
+.navbar a:hover {
     background-color: red;
     color: white;
     border-color: red;
@@ -128,20 +127,21 @@ margin-bottom: 10px;
     cursor: pointer;
 }
 
-input[type=text] {
+input[type=email] {
         width: 100%;
         padding: 12px 20px;
         margin: 8px 0;
         box-sizing: border-box;
-        background-color: #131010;
+        background-color: #3b3b3b;
         border-radius: 15px;
-        border: #000 2px;
+        border: #000 10px solid;
         font-size: x-large;
         text-align: center;
+        color: white;
  }
 
 input::placeholder{
-    color: rgb(224, 27, 27);
+    color: rgb(255, 0, 0);
     font-weight: bold;
     opacity: 0.5;
 }
@@ -547,3 +547,24 @@ grid-column: second/third;
     border: none;
 }
 
+fieldset{
+    width: 400px;
+    border:#580000 2px solid;
+}
+
+.fieldset{
+display: flex;
+justify-content: center;
+
+}
+
+.contactustext{
+    font-size: medium;
+    background-color: none;
+    color: black;
+    border: none;
+}
+
+.contactform{
+    text-align: center;
+}
